[package]
name = "rust-networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }
tokio = {version = "1.21.2", features = ["full"]}
rustls-pemfile = "1.0.1"
tokio-rustls = "0.23.4"
webpki-roots = "0.22.5"